--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 telefono: telefono
             };
 
-            const url = "https://script.google.com/macros/s/AKfycby2QzZQ0riz_5ljKm2qHoXwoB8aaRa8LIaWIBRsP9nagRsquhmMsZfvN8xp7b3inek/exec";
+            const url = https://script.google.com/macros/s/AKfycby2QzZQ0riz_5ljKm2qHoXwoB8aaRa8LIaWIBRsP9nagRsquhmMsZfvN8xp7b3inek/exec;
 
             try {
                 const res = await fetch(url, {
